# LLM_Evaluation

./: .gitignore  README.md  pyproject.toml
notebooks/: LLM runtime for QnA evaluation - mistral.html  LLM runtime for QnA evaluation - phi 4.html  LLM runtime for QnA evaluation.ipynb  PIQA eval llama 3.1 8B.html  PIQA eval mistral.html  PIQA eval.ipynb  PIQA llama 3.1 8b instruct.html  PIQA-mistral.html  PIQA.ipynb  mistral evaluation.ipynb  phi 4 evaluation.ipynb
